# Async_API_sprint_2

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: code-checker.yaml
etl/: __init__.py  film_works.Dockerfile  genres.Dockerfile  persons.Dockerfile  requirements.txt
etl/common/: __init__.py  etl_settings.py  logger.py  postgres_utils.py  state.py
etl/common/components/: __init__.py  base.py  elasticsearch_loader.py  producer.py
etl/common/models/: __init__.py  main.py  utils_sql.py
etl/common/utils/: __init__.py  convert.py
etl/film_works/: __init__.py  enricher.py  main.py  merger.py  settings.py  storage.json  transform.py
etl/genres/: __init__.py  main.py  settings.py  storage.json  transform.py
etl/persons/: __init__.py  main.py  settings.py  storage.json  transform.py
fastapi-solution/: requirements.txt
fastapi-solution/src/: main.py
fastapi-solution/src/core/: config.py  logger.py
fastapi-solution/src/db/: cache.py  elastic.py  redis.py  storage.py
fastapi-solution/src/models/: general.py  main.py
fastapi-solution/src/services/: cache.py  elastic.py  films.py  genres.py  persons.py  redis.py
tests/: __init__.py
tests/functional/: Dockerfile  config.py  conftest.py  docker-compose.yaml  logger.py  requirements.txt
tests/functional/src/: test_film.py  test_films.py  test_genres.py  test_persons.py
tests/functional/testdata/: es_mapping.py  films.py  genres.py  persons.py
tests/functional/utils/: elastic.py  helpers.py  wait_for_es.py  wait_for_redis.py
(+6 files in other folders)
