[tool.poetry]
name = "fastapi-solution"
version = "0.1.0"
description = ""
authors = ["Elizaveta Tishkovets, Oleg Rubtsov"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.1"
psycopg2 = "^2.9.4"
elasticsearch = "^8.4.3"
elastic-transport = "^8.4.0"
aioredis = "^2.0.1"
httpx = "^0.23.0"
uvicorn = "^0.18.3"
pydantic = "^1.10.2"
orjson = "^3.8.0"
aiohttp = "^3.8.3"
flake8 = "^5.0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
